--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <div class="card-header">
                         UP - Altas Aventuras
                     </div>
-                    <img src="../HTML/IMAGENS/00.jpg" class="card-img-top img-fluid" alt="Cena do filme A Vida é Bela">
+                    <img src="00.jpg" class="card-img-top img-fluid" alt="Cena do filme A Vida é Bela">
                     <div class="card-body">
                         <p id="txt">
                         <h5 class="card-title">Aprendendo a seguir em frente</h5>
