--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <img src="Matrix-Matrix-_-Lana-Lilly-Wachowski.jpg" class="card-img-top img-fluid" alt="Cena do filme Matrix">
                     <div class="card-body">
                         <h5 class="card-title">A Busca pela Verdade e Liberdade</h5>
-                        <p class="card-text">Neo descobre que a realidade é uma simulação e embarca em uma jornada para libertar a humanidade. O filme nos convida a questionar a **percepção da realidade, o livre-arbítrio e o poder da escolha** em um mundo de ilusões, incentivando a busca pela verdade individual.</p>
+                        <p class="card-text">Neo descobre que a realidade é uma simulação e embarca em uma jornada para libertar a humanidade. O filme nos convida a questionar a percepção da realidade, o livre-arbítrio e o poder da escolha em um mundo de ilusões, incentivando a busca pela verdade individual.</p>
                         <span class="badge badge-custom">Ficção Científica</span>
                         <span class="badge badge-custom">Ação</span>
                     </div>
